BFT-000 | Fixed brainsum logo on mobile footer.

--- a/sites/all/themes/kovotech_mobile/css/kovotech_mobile.components.css
+++ b/sites/all/themes/kovotech_mobile/css/kovotech_mobile.components.css
@@ -1121,7 +1121,6 @@ footer .madeby a {
 footer .madeby p::before {
   padding-right: 5px;
   content: url(../images/brainsum-logo.png);
-  vertical-align: middle;
 }
 
 footer a {
