--- a/sites/all/themes/kovotech_mobile/sass/components/footer/_footer.scss
+++ b/sites/all/themes/kovotech_mobile/sass/components/footer/_footer.scss
@@ -42,7 +42,6 @@ footer {
 
     p::before {
       content: url(../images/brainsum-logo.png);
-      vertical-align: middle;
       padding-right: 5px;
     }
   }
